# ExMechEva

./: .gitignore  Bending.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Eva_ACT.py  Eva_ATT.py  Eva_Conclusion_PMat.py  Eva_Conclusion_new.py  Eva_DIC.py  Eva_TBT.py  Eva_TBT_MMCB.py  Eva_TBT_MMCB_Conclusionpy.py  Eva_TBT_Methods.py  Eva_TBT_Verif.py  Eva_TBT_Zesbo_Mand.py  Eva_common.py  LICENSE  README.md  Vergleich_Entnahme.py  doc_requirements.txt  pyproject.toml  requirements.txt
data/Test/ACT/Complete_Eva/: ACT-Summary.h5
data/Test/ACT/Series_Test/: ACT_Protocol_Series_Test.xlsx  com_eva_opts.json
data/Test/ACT/Series_Test/eva/: tl21x-Mat.csv  tl21x.csv
data/Test/ACT/Series_Test/meas/conventional/: SL21X.xlsx
data/Test/ACT/Series_Test/meas/optical/: sl21x.csv
data/Test/ATT/Complete_Eva/: ATT-Summary.h5
data/Test/ATT/Series_Test/: ATT_Protocol_Series_Test.xlsx  com_eva_opts.json
data/Test/ATT/Series_Test/eva/: sr03a-Mat.csv  sr03a.csv
data/Test/ATT/Series_Test/meas/conventional/: WR03A.xlsx
data/Test/ATT/Series_Test/meas/optical/: WR03A.csv
data/Test/TBT/Complete_Eva/: TBT-Summary.h5
data/Test/TBT/Series_Test/: TBT_Protocol_Series_Test.xlsx  com_eva_opts.json
data/Test/TBT/Series_Test/eva/: cl12a-Mat.csv  cl12a.csv
data/Test/TBT/Series_Test/meas/conventional/: KL12A.xlsx
data/Test/TBT/Series_Test/meas/optical/: kl12a.csv
data/test/ACT/Series_Test/: com_eva_opts.json
docs/: conf.py  exmecheva.bending.rst  exmecheva.rst  modules.rst
docs/_build/doctrees/: conf.doctree  environment.pickle  exmecheva.bending.doctree  exmecheva.common.doctree  exmecheva.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  conf.html  exmecheva.bending.html  exmecheva.common.html  exmecheva.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/exmecheva/: Eva_ACT.html  Eva_ATT.html  Eva_TBT.html  eva.html
docs/_build/html/_modules/exmecheva/bending/: bfunc_class.html  bfunc_com.html  bfunc_fse.html  evaluation.html  fitting.html  opt_mps.html  plotting.html
docs/_build/html/_modules/exmecheva/common/: analyze.html  eva_opt_hand.html  fitting.html  helper.html  list_ops.html  (+8 more)
docs/_build/html/_sources/: exmecheva.common.rst.txt  index.rst.txt  modules.rst.txt
exmecheva/: Bending.py  Eva_ACT.py  Eva_ATT.py  Eva_TBT.py  Eva_TBT_Zesbo_Mand_Conclusion.py  Eva_common.py  __init__.py  eva.py  helper.py
exmecheva/bending/: __init__.py  attr_bgl.py  bfunc_class.py  bfunc_com.py  bfunc_fse.py  evaluation.py  fitting.py  opt_mps.py  plotting.py
exmecheva/common/: __init__.py  analyze.py  eva_opt_hand.py  fitting.py  helper.py  list_ops.py  loadnsave.py  mc_char.py  mc_man.py  mc_smoothing.py  mc_yield.py  output.py  pd_ext.py  plotting.py  stat_ext.py
scripts/: version_comparision.py
scripts/00_examples/: ACT_Test.py  ATT_Test.py  TBT_Test.py
scripts/01_PF/: ACT_PF.py  ATT_PF.py  Eva_Conclusion_PMat.py  Eva_Conclusion_new.py  TBT_PF.py  Vergleich_Entnahme.py
scripts/01_PF/Methods_Verif/: Eva_TBT_Verif_Methods.py
scripts/example/: ACT_Test.py
tests/: test_tbt_emdet.py
