[project]
name = "ExMechEva"

version = "0.1.0"

description = "Evaluation of experimental mechanics data"

readme = "README.md"

requires-python = ">=3.7.10"

license = {file = "LICENSE"}

keywords = [
	"experimental mechanics",
	"biomechanics",
	"three point bending",
	"axial compression",
	"axial tension",
	]

authors = [
	{name = "Marc Gebhardt", email = "120391701+MarcGebhardt@users.noreply.github.com" }
]

maintainers = [
	{name = "Marc Gebhardt", email = "120391701+MarcGebhardt@users.noreply.github.com" }
]

classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3 :: Only",
]

dependencies = [
	"numpy>=1.20.3",
	"scipy>=1.6.2",
	"pandas>=1.3.0",
	"matplotlib>=3.3.4",
	"seaborn>=0.11.1",
	"sympy>=1.8",
	"statsmodels>=0.12.2",
	"scikit_posthocs>=0.7.0",
	"lmfit>=1.0.2",
	"tqdm>=4.61.2",
	"vg>=1.9.0"
]

[project.urls]
"Homepage" = "https://github.com/MarcGebhardt/ExMechEva"
"Issues" = "https://github.com/MarcGebhardt/ExMechEva/issues"
"Source" = "https://github.com/MarcGebhardt/ExMechEva"
"Changelog" = "https://github.com/MarcGebhardt/ExMechEva/CHANGELOG.md"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["exmecheva","scripts","data"]
[tool.setuptools.package-data]
"*" = ["*.md", "*.xlsx", "*.csv", "*.json", "*.log", "*.h5", "*.pdf"]