[project]
name = "ExMechEva"

version = "0.1.2"

description = "Evaluation of experimental mechanics data"

readme = "README.md"

requires-python = ">=3.7.10"

license = {file = "LICENSE"}

keywords = [
	"experimental mechanics",
	"biomechanics",
	"three point bending",
	"axial compression",
	"axial tension",
	]

authors = [
	{name = "Marc Gebhardt", email = "marcgebhardt.dev+gheme@gmail.com" }
]

maintainers = [
	{name = "Marc Gebhardt", email = "marcgebhardt.dev+gheme@gmail.com" }
]

classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3 :: Only",
]

dependencies = [
	"numpy>=1.20.3",
	"scipy>=1.6.2",
	"pandas>=1.3.0",
	"matplotlib>=3.3.4",
	"seaborn>=0.11.1",
	"sympy>=1.8",
	"statsmodels>=0.12.2",
	"scikit_posthocs>=0.7.0",
	"lmfit>=1.0.2",
	"tqdm>=4.61.2",
	"vg>=1.9.0"
]

[project.urls]
"Homepage" = "https://github.com/MarcGebhardt/ExMechEva"
"Issues" = "https://github.com/MarcGebhardt/ExMechEva/issues"
"Source" = "https://github.com/MarcGebhardt/ExMechEva"
"Changelog" = "https://github.com/MarcGebhardt/ExMechEva/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"